quiz_server/public/css/style.css
/* ... */
.accordion-trigger {
    background: transparent;
    border: 0;
    font: inherit;
    color: inherit;
}

.accordion-trigger.more-info {
    font-size: 26px !important;
}

.accordion-trigger.more-info[aria-expanded="true"]::before,
.accordion-trigger.more-info[aria-expanded="true"]::after {
    transform: rotate(405deg);
}

#favorite-quote-container,
#blacklist-quote-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
}

#edit-reason-input-container {
    display: grid;
    grid-template-rows: 0fr;
    transition: grid-template-rows 500ms;
}

#edit-reason-input-container[aria-hidden="false"] {
    grid-template-rows: 1fr;
}

#edit-reason-input-container>form {
    overflow: hidden;
}

#edit-reason-input-container {
    padding: 1rem 0 0 0;
}

#edit-reason-input-container a {
    color: var(--dark-yellow-color);
    transition: 500ms;
    margin-left: 10px;
    font-size: 24px;
}

#edit-reason-input-container input[type="submit"] {
    font-size: 22px;
}

#edit-reason-input-container a:hover {
    color: var(--light-yellow-color);
}

#edit-reason {
    filter: invert(1);
    padding: 0 0 0 1rem;
    width: 18px;
    height: 18px;
    cursor: pointer;
    transition: 500ms;
}

#edit-reason:hover {
    transform: scale(1.1);
}

#edit-reason-text-input {
    width: 200px;
    height: 26px;
    font-size: 18px;
    vertical-align: bottom;
}

#delete-quote-article {
    max-width: 35px;
    max-height: 35px;
    align-self: center;
}

#delete-quote>img {
    width: 25px;
    height: 25px;
    transition: 500ms;
}

#delete-quote>img:hover {
    transform: scale(1.1);
}

.quote:has(+ #delete-quote-article) {
    transition: 100ms;
}

.quote:has(+ #delete-quote-article:hover) {
    text-decoration: red line-through;
    opacity: 0.85;
}

#blacklist-reason {
    font-size: 18px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: #FFF;
}





/*#endregion*/

/*#region------------------------------PRIVACY POLICY----------------------------*/

#privacy {
    color: #fff;
    max-width: 75%;
    align-self: center;
    padding: 1rem;
}

#privacy h1 {
    color: var(--light-yellow-color);
    font-size: 30px;
    text-align: center;
}

#privacy h2 {
    color: var(--light-yellow-color);
}

#privacy ul {
    display: block;
    list-style: disc;
}

/*#endregion*/

/*#region------------------------------FOOTER----------------------------*/

footer {
    text-transform: uppercase;
    width: 100%;
    /* color: white; */
    color: #858b94;
    /* background-image: url("/images/quotes-background.jpg"); */
    font-size: 14px;
    display: flex;
    flex-direction: row;
    height: auto;
    padding: 2px 0 2px 0;
    justify-content: space-around;
    flex-wrap: wrap;
    /* border-top: 3px solid black; */
}

footer a {
    color: #858b94;
    text-decoration: none;
    vertical-align: bottom;
    transition: 0.5s;
}

footer a:hover {
    color: #fff
}

/*#endregion*/

/*#region------------------------------MEDIA QUERIES----------------------------*/





@media all and (max-width:885px) {

    body {
        overflow: auto;
    }

    .link-button {
        margin: 0.5rem;
    }

    #quote-section>h3 {
        padding: 0.5rem 0 0 0;
    }

    #quote {
        padding: 0;
    }
}

@media all and (max-width: 863px) {

    .main {
        margin-top: 70px;
        transition: margin-top 0.5s;
    }

    #index-container {
        flex-direction: column;
    }

    .landing-page .buttons {
        right: 20px;
    }
}


@media all and (max-width:550px) {

    form {
        flex-direction: column;
    }

    #aside {
        padding: 1rem;
    }

    .movie {
        margin-bottom: 0.5rem;
    }

    .character {
        margin-top: 0.5rem;
    }

    #quote {
        font-size: 24px;
    }

    .landing-page .buttons {
        right: 20px;
    }

    .accordion .quote {
        font-size: 20px;
    }

    #favorites-list .name button,
    #blacklist .name button {
        font-size: 20px;
    }

    #more-info {
        font-size: 20px;
        max-width: max-content;
        justify-self: center;
        text-align: left;
    }

}

@media all and (max-width:450px) {
    .main {
        margin-top: 105px;
        transition: margin-top 0.5s;
    }

    #blacklist-popup {
        width: 225px;
    }

    #blacklist-popup textarea {

        max-width: 200px;
        max-height: 300px;
        min-width: 75px;
        min-height: 75px;

    }

    .landing-page .buttons {
        right: 20px;
    }

}

@media all and (max-width:430px) {

    #header-container {
        flex-direction: column;
        text-align: center;
    }

    .dropdown-content {
        top: 195px;
    }

    .main {
        margin-top: 105px;
        transition: margin-top 0.5s;
    }


    .index-choice img {
        max-width: 280px;
    }

    .highscore h2,
    .highscore h2 span {
        font-size: 32px;
    }

    #highscore-table {
        margin: 0.5rem 0.25rem 0.5rem 0.25rem;
    }

    #highscore-table th {
        font-size: 30px;
    }

    #highscore-table td {
        font-size: 24px;
        padding: 0.5rem;
    }

    #quote {
        margin: 0;
    }

    #form-quiz {
        padding: 0;
    }

    #movie-output,
    #character-output {
        padding: 1rem 0 1rem 0;
    }

    .landing-page main figure img {
        width: 175px;
        height: 125px;
    }

    .landing-page .buttons {
        right: 20px;
    }

    #favorites-list,
    #blacklist {
        width: 100%;
        margin-inline: auto;
    }

    .accordion-trigger.more-info {
        font-size: 20px !important;
    }

    #favorite-quote-container>article>p {
        font-size: 20px;
    }

    #favorites-list>a button {
        font-size: 18px;
    }


}
/* ... */

